fix: resolve P2P Connection Refused - add canReach() check, fix seed-nodes property key, evict dead peers